# codeforge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/commands/: brutal-honest.md  design-session.md  investigate-run.md  new-project.md  review.md  ship.md
codeforge/: __main__.py
codeforge/agents/: architecture_designer.py  base.py  code_reviewer.py  coder.py  commit_writer.py  requirements_analyst.py  security_reviewer.py  test_analyst.py  test_designer.py  test_runner.py
codeforge/cli/: commands.py  interaction.py  lock.py  seed_parser.py
codeforge/config/: codeforge.config.yaml  config_loader.py  pipeline.config.yaml
codeforge/firewall/: assembler.py  audit.py  manifest.py  manifest.yaml
codeforge/model_router/: router.py
codeforge/orchestrator/: event_log.py  gates.py  pending_writes.py  routing.py  state_machine.py  state_writer.py
codeforge/schemas/: contracts.py  validation.py
docker/: Dockerfile.sandbox
firewall/: assembler.py  audit.py  manifest.py
schemas/: contracts.py  validation.py
store/: artifact_store.py
tests/: conftest.py  test_artifact_store.py  test_assembler.py  test_coder.py  test_commit_writer.py  test_commit_writer_edits.py  test_config_diff.py  test_contracts.py  test_edits.py  test_escalation_counter_resets.py  test_gates_payload.py  test_lock.py  test_pending_writes.py  test_phase_loops.py  test_prompt_build.py  test_resume_reentry.py  test_router_tools.py  test_routing.py  test_stacks.py  test_state_machine.py  test_test_designer.py  test_test_runner.py  test_tools.py  test_ui_design.py
(+58 files in other folders)
