[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeforge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13,<3.0",
    "pyyaml>=6.0,<7.0",
    "typer>=0.12,<1.0",
    "structlog>=24.1,<27.0",
    "filelock>=3.14,<4.0",
    "litellm>=1.88,<2.0",
    "gitpython>=3.1,<4.0",
    "PyGithub>=1.58,<3.0",
    "docker>=7.0,<8.0",
]

[project.scripts]
codeforge = "codeforge.__main__:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
